--- a/Pokemon but with Monsters/Packages/manifest.json
+++ b/Pokemon but with Monsters/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.3",
     "com.unity.collab-proxy": "2.0.0",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.feature.cinematic": "1.0.0",
